kubernetes/apps/httpbin/manifest/templates/traefik-middleware-oauth2.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-auth
  namespace: httpbin
spec:
  forwardAuth:
    address: http://whoami-oauth2-proxy.whoami.svc.cluster.local/oauth2/
    trustForwardHeader: true
    authResponseHeaders:
      - "X-Auth-Request-User"
      - "X-Auth-Request-Email"
      - "X-Auth-Request-Groups"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: require-admin-group
  namespace: httpbin
spec:
  plugin:
    checkheadersplugin:
      headers:
        - header:
          name: "X-Auth-Request-Groups"
          matchtype: one
          contains: true
          required: true
          values:
            - "4cc0e15c-4414-4aa8-b34e-7b20a29cf575"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-chain
  namespace: httpbin
spec:
  chain:
    middlewares:
      - name: oauth2-auth
      - name: require-admin-group
