kubernetes/apps/httpbin/manifest/templates/istio-gw.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: httpbin-istio-gw
  namespace: httpbin
spec:
  selector:
    app: istiod
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "httpbin.yuriy-lab.cloud"
