kubernetes/apps/httpbin/manifest/templates/ingress-traefik.yaml
# test example -> curl -v https://whoami.yuriy-lab.cloud --resolve whoami.yuriy-lab.cloud:443:192.168.0.XXX
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httbin-traekif-ingress
  namespace: httpbin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/router.middlewares: httpbin-oauth2-chain@kubernetescrd

spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - httpbin.traefik.yuriy-lab.cloud
    secretName: httpbin-traefik-lab-tls
  rules:
    - host: httpbin.traefik.yuriy-lab.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin-httpbingo
                port:
                  number: 80
