kubernetes/apps/httpbin/manifest/templates/istio-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: httpbin-istio-vs
  namespace: httpbin
spec:
  hosts:
    - "httpbin.yuriy-lab.cloud"
  gateways:
    - httpbin-istio-gw
  http:
    - route:
      - destination:
          host: httpbin-httpbingo.httpbin.svc.cluster.local
          port:
            number: 80
